overlapped solved and video

--- a/degndev/styles.css
+++ b/degndev/styles.css
@@ -36,6 +36,39 @@ li, a {
     text-decoration: none;
 }
 
+.overlay p{
+  font-size: 30px;
+}
+
+
+@media only screen and (max-width: 600px) {
+  .overlay p{
+    font-size:20px;
+  }
+
+
+  .btn1{
+    display: none;
+  }
+  .btn2{
+    font-size: 10px;
+  }
+}
+@media only screen and (max-width: 400px) {
+  .overlay p{
+    font-size:10px;
+  }
+
+
+  .btn1{
+    display: none;
+  }
+  .btn2{
+    font-size: 10px;
+  }
+}
+
+
 a:hover {
   color:white;
 }
@@ -55,20 +88,20 @@ header {
   border-radius: 0 0 50% 50%/50%;
 
 }
-
+/*
 .parallax {
-  /* The image used */
+   The image used
   background-image: url(img/3.png);
 
-  /* Set a specific height */
+  Set a specific height
   min-height: 100%;
 
-  /* Create the parallax scrolling effect */
+  Create the parallax scrolling effect
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-}
+} */
 
 header .overlay{
 	width: 100%;
@@ -82,7 +115,6 @@ header .overlay{
 }
 
 h1 {
-	font-size: 80px;
 	margin-bottom: 30px;
 }
 
@@ -121,7 +153,7 @@ button:hover{
   }
 
   .effects{
-
+    background-size: cover;
   }
 
 .container,h1,p{
@@ -139,11 +171,12 @@ button:hover{
   #services{
     text-align: center;
     position: relative;
-    z-index: 1;
+    z-index: -1;
     display: flex;
     justify-content: center;
     align-items: center ;
   }
+
 
 .portfolio{
   text-align: center;
@@ -156,7 +189,7 @@ button:hover{
 #pricing{
   text-align: center;
   position: relative;
-  z-index: 1;
+  z-index: -1;
   display: flex;
   justify-content: center;
   align-items: center ;
@@ -165,7 +198,7 @@ button:hover{
 #video{
   text-align: center;
   position: relative;
-  z-index: 1;
+  z-index: -1;
   display: flex;
   justify-content: center;
   align-items: center ;
@@ -174,31 +207,29 @@ button:hover{
 .team{
   text-align: center;
 }
-
-#team{
+ #team{
   text-align: center;
   position: relative;
-  z-index: 1;
+  z-index: -1;
   display: flex;
   justify-content: center;
   align-items: center ;
 }
 
-.contact{
+/* .contact{
   text-align: center;
 }
 
 #contact{
   text-align: center;
   position: relative;
-  z-index: 1;
   display: flex;
   justify-content: center;
   align-items: center ;
-}
+} */
 
 .video{
-  z-index: 1;
+  z-index: -1;
   /* margin-left: 10px; */
 }
 
@@ -284,7 +315,7 @@ button:hover{
 #footer{
   text-align: center;
   position: relative;
-  z-index: 2;
+  z-index: -1;
   display: flex;
   justify-content: center;
   align-items: center ;
@@ -326,21 +357,20 @@ button:hover{
 }
 
 
+
 .sidenav {
   height: 100%;
   width: 0;
   position: fixed;
   z-index: 1;
-  top: 0;
   left: 0;
-  background-color: #111;
+  background-color: white;
   overflow-x: hidden;
   transition: 0.5s;
-  padding-top: 160px;
+  padding-top: 60px;
 }
 
 .sidenav a {
-  
   padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 25px;
@@ -355,16 +385,10 @@ button:hover{
 
 .sidenav .closebtn {
   position: absolute;
-  top: 0;
+  top: 10px;
   right: 25px;
   font-size: 36px;
   margin-left: 50px;
-  padding-top: 100px;
-}
-
-#main {
-  transition: margin-left .5s;
-  padding: 16px;
 }
 
 @media screen and (max-height: 450px) {
